# shyloo-chat

src/logic/: CMakeLists.txt
src/logic/agent/: Agent.cpp  Agent.h  AgentSession.cpp  AgentSession.h
src/logic/auth/: Auth.cpp  Auth.h  CMakeLists.txt
src/logic/balance/: Balance.cpp  Balance.h
src/logic/channel/: CMakeLists.txt  Channel.cpp  Channel.h
src/logic/define/: ChatProtocol.h  GameDefine.h  NodeDefine.h  NodeProtocol.h  Protocol.pb.cc  Protocol.pb.h  Protocol.proto  Protocol.proto.cs  ProtocolID.pb.cc  ProtocolID.pb.h  ProtocolID.proto  ProtocolID.proto.cs
src/logic/gate/: CMakeLists.txt  Gate.cpp  Gate.h  GateTimer.cpp  GateTimer.h
src/logic/interface/: IAgent.h  IAuth.h  IChannel.h
